deleted carousel side spaces in mobile version, fixed textarea text not hidding behind send-button

--- a/css/styles.css
+++ b/css/styles.css
@@ -59,6 +59,10 @@
 	max-width: 100%;
 }
 
+.slick-prev, .slick-next { 
+	display: none !important; 
+}
+
 .section-about {
 	font-size: 28px;
 	line-height: 34px;
@@ -107,6 +111,8 @@
 
 #contactUs {
 	position: relative;
+	display: flex;
+	flex-wrap: wrap;
 }
 
 .send-message-area {
@@ -115,6 +121,7 @@
 	border: 1px solid #000000;
 	padding-left: 30px;
 	padding-top: 49px;
+	padding-right: 240px;
 	resize: none;
 }
 
@@ -129,6 +136,12 @@
 	position: absolute;
 	top: 30px;
 	right: 30px;
+	border: none;
+	cursor: pointer;
+}
+
+.send-message:hover {
+	background-color: #5D5D5D;
 }
 
 /*Tablet view*/
@@ -435,6 +448,7 @@
 		padding-top: 20px;
 		text-align: center;
 		margin-bottom: 20px;
+		padding-right: 0;
 	}
 
 	.send-message {
